<resources>
    <string name="app_name">SignUp</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string-array name="branch">
        <item>CSE</item>
        <item>CSE-AIML</item>
        <item>CSE-DS</item>
        <item>CS</item>
        <item>IT</item>
        <item>CSIT</item>
        <item>ECE</item>
        <item>EN</item>
        <item>ME</item>
        <item>CIVIL</item>
    </string-array>
    <string-array name="year">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
    </string-array>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_password">Create Password</string>
    <string name="password">Password</string>
    <string name="user_id_">User ID ( University Roll No. )</string>
    <string name="submit">Submit</string>
    <string name="login">Log In</string>
    <string name="instagram">Instagram</string>
    <string name="roll_no">Roll No.</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="address">Address</string>
    <string name="year">Year : </string>
    <string name="branch">Branch : </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone">+91 9876543210</string>
    <string name="email">abc123xyz@gmail.com</string>
    <string name="other">other</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="email_verification">EMAIL VERIFICATION</string>
    <string name="phone_verification">PHONE VERIFICATION</string>
    <string name="an_otp_is_sent_to_your_phone_number_n_91">An OTP is sent to your Phone Number.\n+91 **********</string>
    <string name="an_otp_is_sent_to_your_email_address_n">An OTP is sent to your Email Address.\n*******@*****.***</string>
</resources>